agrega punto 8 y refactor